#################################|###|#####################################
#  __                            |   |                                    #
# |  |--.--.--.----.-----.-----. |===| This file is part of Byron v0.1    #
# |  _  |  |  |   _|  _  |     | |___| An evolutionary optimizer & fuzzer #
# |_____|___  |__| |_____|__|__|  ).(  https://pypi.org/project/byron/    #
#       |_____|                   \|/                                     #
################################## ' ######################################
# Copyright 2023 Giovanni Squillero and Alberto Tonda
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "byron"
version = "0.1.dev13"
description = "Multi-purpose extensible self-adaptive optimizer and fuzzer"
authors = [
    "Giovanni Squillero <giovanni.squillero@polito.it>",
    "Alberto Tonda <alberto.tonda@inrae.fr>",
]
#maintainers = [
#    "Giovanni Squillero <giovanni.squillero@polito.it>"
#]
license = "Apache-2.0"
readme = "docs/pypi.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
# homepage = "https://squillero.github.io/byron/"
repository = "https://github.com/cad-polito-it/byron"
documentation = "https://github.com/cad-polito-it/byron/tree/pre-alpha/examples/notebooks"
keywords = [
    "Aritificial Intelligence",
    "Evolutionary Computation",
    "Approximate Optimization",
    "Fuzzer",
]

[tool.poetry.dependencies]
arcade = { version = "^2.6.17", extras = ["plot"] }
joblib = { version = "^1.3.2", extras = ["run"] }
matplotlib = { version = "^3.7.2", extras = ["plot"] }
networkx = "^3.1"
numpy = "^1.25.0"
psutil = { version = "^5.9.5", extras = ["info"] }
python = ">=3.11,<3.13"
scipy = "^1.11.1"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.7"
ipykernel = "^6.23.3"
jupyter = "^1.0.0"
mypy = "^1.4.1"
pylint = "^2.17.4"
pytest = "^7.4.0"
black = {extras = ["jupyter"], version = "^23.7.0"}
bumpver = "^2023.1126"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py311', 'py312']
extend-exclude = "^venv$"
include = '(\.ipynb$|\.py$)'
line-length = 120
skip-string-normalization = true

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
branch = true

[tool.coverage.report]
include = ['byron/*']
omit = ['test/*', '.*/*', 'venv/*']

[tool.mypy]
modules = ['byron']

[tool.pytype]
inputs = ['byron']

[tool.pylint]
max-line-length = 120
source-roots = ['src']

[bumpver]
current_version = "0.1.dev13"
version_pattern = "MAJOR.MINOR[PYTAGNUM].devINC0"

[bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{pep440_version}"$',
    '^current_version = "{pep440_version}"$',
]
"README.md" = [
    "\\[Version: {pep440_version}\\]",
    "version-{pep440_version}-orange"
]
